--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,4 +9,14 @@
           "dest": "/"
         }
     ]
+
+    {
+  "rewrites": [
+    {
+      "source": "/(.*)", 
+      "destination": "/index.html"
+    }
+  ]
+}
+
   }
